Added Login in system that will store login details in database.json with encrypted password. If login details are incorrect the program will close chrome and restore back to the login screen.

--- a/src/kv/Login.kv
+++ b/src/kv/Login.kv
@@ -35,6 +35,17 @@
             font_size: 28
             size_hint_y: .2
 
+        BoxLayout:
+            orientation: "horizontal"
+            size_hint_y: .1
+            padding: [20,10,10,10]
+            Label:
+            Label:
+                text: "Remember Username"
+                font_size: 24
+            CheckBox:
+                id: login_checkbox
+                active: False
         Button:
             text: 'Login'
             font_size: 24
