--- a/src/kv/Login.kv
+++ b/src/kv/Login.kv
@@ -5,19 +5,32 @@
         orientation: 'vertical'
         padding: [10,10,10,10]
         spacing: 10
-        Label:
-            text: 'Username'
-            font_size: 28
-            color: (1,1,1)
-            #text_size: root.width-20, 20
+        BoxLayout:
+            orientation: 'horizontal'
             size_hint_y: .1
+            padding: [10,10,10,10]
+            spacing: 10
+            Button:
+                text: 'Settings'
+                size_hint_x: .2
+                on_press: root.show_settings()
+            Label:
+                text: 'Username'
+                font_size: 28
+                color: (1,1,1)
+                size_hint_x: .6
+                #text_size: root.width-20, 20
+            Label:
+                size_hint_x: .2
 
         TextInput:
             id: username
             multiline:False
             font_size: 28
             write_tab:False
-            size_hint_y: .2
+            size_hint_y: .1
+        Label:
+            size_hint_y: .05
 
         Label:
             text: 'Password'
@@ -33,6 +46,8 @@
             write_tab:False
             password:True
             font_size: 28
+            size_hint_y: .1
+        Label:
             size_hint_y: .2
 
         BoxLayout:
@@ -63,7 +78,13 @@
             orientation: 'horizontal'
             size_hint_y: 0.1
             padding: [10,10,10,10]
+            spacing: 10
+            Button:
+                text: 'Settings'
+                size_hint_x : .5
+                on_press: root.show_settings()
             Label:
+                size_hint_x : .4
             Label:
                 text: 'Auto Picker'
                 font_size: 32
@@ -104,6 +125,15 @@
                 on_press: root.do_pick()
                 size_hint_x: 0.4
 
+<SettingsScreen>:
+    BoxLayout:
+        id: settings_layout
+        orientation: 'vertical'
+        Label:
+            text: "Settings"
+        Button:
+            text: "Save"
+            on_press: root.save_and_return()
 <BackgroundColor@Widget>:
     background_color: 1, 1, 1, 1
     canvas.before:
