--- a/src/kv/Login.kv
+++ b/src/kv/Login.kv
@@ -15,7 +15,7 @@
                 size_hint_x: .2
                 on_press: root.show_settings()
             Label:
-                text: 'Username'
+                text: 'Email'
                 font_size: 28
                 color: (1,1,1)
                 size_hint_x: .6
@@ -56,7 +56,7 @@
             padding: [20,10,10,10]
             Label:
             Label:
-                text: "Remember Username"
+                text: "Remember Email"
                 font_size: 24
             CheckBox:
                 id: login_checkbox
