Added Variable for Timeout and added error handling of chrome driver

--- a/src/kv/Login.kv
+++ b/src/kv/Login.kv
@@ -145,10 +145,17 @@
         BoxLayout:
             orientation: 'horizontal'
             Label:
-                text: "Setting 2"
-                size_hint_x: .7
+                text: "Chrome Driver"
+                size_hint_x: .3
+            CheckBox:
+                id: chrome_driver_manual
+                active: False
+                size_hint_x: .05
+            Label:
+                size_hint_x: .05
             SettingTextInput:
-
+                id: chrome_driver_setting
+                size_hint_x: .58
         BoxLayout:
             orientation: 'horizontal'
             Label:
